stop-gap style events results page

--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -623,6 +623,14 @@ nav button {
     }
 }
 
+.g1EventsResults {
+    header {
+        cursor: pointer;
+        background-color: var(--color-primary);
+    }
+}
+
+
 /* FLOATING COMPONENTS */
 .g1Lightbox {
     position: fixed;
